# upgrad-ai

./: 1-basicgraph.py  1-data-preparations.py  1-fulltextsearch.py  2-basicragwithgraph.py  2-train-gpt2.py  3-similaritysearch.py  4-dynamic-wikipedia.py  4-embeddingstore.py  5-advancedgraph.py  Bloom_model.ipynb  FastAPI.ipynb  Langchain.ipynb  Testing_LLMGraphTransformer.ipynb  Word2Vec.ipynb  basicrag.ipynb  clip_diffusers_demo.ipynb  langchain_rag_tutorial.ipynb  ollam.py  rag-graphdb.py  rag_implementation.ipynb  session-10.yml  wikipedia_document_loader,_faiss.ipynb
Capstone Project/Arjun/: rag_customer_chatbot.ipynb
Capstone Project/Giriraj/: news_aggregator.ipynb
Capstone Project/Kartikey_/: dataset.py  predict.py  requirements.txt
Capstone Project/PIYUSH/: CHATBOT_ZomatoFinancials.ipynb
Capstone Project/Shivam/: Chatbot_S.ipynb  documentation langbneo4j.docx
Capstone Project/Shubham/rag-chatbot/chatbot_api/: pyproject.toml
Capstone Project/Shubham/rag-chatbot/chatbot_api/src/: main.py
Capstone Project/Shubham/rag-chatbot/chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
Capstone Project/Shubham/rag-chatbot/chatbot_api/src/chatbot_api.egg-info/: PKG-INFO  requires.txt
Capstone Project/Siddhant/: Chatbot_Upgrad.ipynb
Training Session Recordings/: Incedo Session Recording.docx
session-07/: 01_tool_usage_langchain.py  02-langgraph_state_demo.py  session-07.yml
session-08/code/: 01_human_intervention.py  02_document_loaders.py  03_embeddings.py  (+2 more)
session-6/: 01-langchain-intro.py  02-advllm.py  03-OSLLM.py  test.py
(+41 files in other folders)
